traversal.snake.Snake.scala.code
override def run() {baisseBrosse();
  while (!positionFinale())
                    {avancer();};}

  
  
  
  
  
def positionFinale(): Boolean = {
  if (!estFaceMur()) 
       {return (false);}
  else if (getDirection()==Direction.EST)
       {gauche() ; (if (estfaceMur())
            {return(true);});}
  else 
       {droite();
        if (estFaceMur())
            {return(true);};}
  return (false);}
  
def avancer(){
  if (!estFaceMur())
  {avance();}
  else if (getDirection() == Direction.EST)
  {gauche();avance();gauche();}
  else 
  {droite();avance();droite();}
}     